
Compatibility with previous releases
====================================
Version 3.6.0 is source and binary compatible with 3.5.


What's new in 3.6.0:
====================
Switch / case statements and expressions have been added to JEXL.

New Features in 3.6.0:
======================
* JEXL-440:     Switch/case statement and expression

Bugs Fixed in 3.6.0:
====================
* JEXL-442:     Local variables are not resolved in interpolation string expression
* JEXL-441:     Tokenization error if "\n" in template expression.
* JEXL-439:     When using reference capture, incorrect scoping when local variable redefines a captured symbo
* JEXL-437:     Semicolons actually not optional between function calls on separate lines
* JEXL-446:     ClassTool module inspection is too strict


========================================================================================================================
Release 3.5.0
========================================================================================================================

Version 3.5.0 is a minor release.

Compatibility with previous releases
====================================
Version 3.5.0 is source and binary compatible with 3.4.


What's new in 3.5.0:
====================
Operator overloading has been enhanced so that overloading compare() will benefit all comparison operators.
A feature flag has been introduced to allow pass-by-reference of captured variables closely mimicking
EcmaScript behavior.

New Features in 3.5.0:
======================
* JEXL-438:     Allow parser factory specification.
* JEXL-428:     Make Comparable object high priority while comparing
* JEXL-427:     Avoid coercing logical expressions to boolean
* JEXL-426:     Enable pass-by-reference for Captured Variables
o               Add and use CoercionException.CoercionException(String, Throwable). Thanks to Gary Gregory.

Bugs Fixed in 3.5.0:
====================