@@ -30,6 +30,12 @@
         <release version="3.6.0" date="YYYY-MM-DD"
                  description="This is a feature and maintenance release. Java 8 or later is required.">
             <!-- FIX -->
+            <action dev="henrib" type="fix" issue="JEXL-447" due-to="William Price">
+                Regression in script-defined functions
+            </action>
+            <action dev="William Price" type="fix" issue="JEXL-446" due-to="William Price">
+                ClassTool module inspection is too strict
+            </action>
             <action dev="henrib" type="fix" issue="JEXL-442" due-to="Xu Pengcheng">
                 Local variables are not resolved in interpolation string expression.
             </action>
