@@ -358,7 +358,7 @@ TOKEN_MGR_DECLS : {
 <*> TOKEN :
 {
   < JXLT_LITERAL:
-    "`"("\n" | "\r" | "\r\n")* ("\\" "`" | ~["\u2028"-"\u202E","\u2066"-"\u2069"])*"`"
+    "`" (~["`","\\","\u2028"-"\u202E","\u2066"-"\u2069"] | "\\" ~["\u0000"])* "`"
   > : DEFAULT
 }
 
